--- a/trunk/Moo/Moo.csproj
+++ b/trunk/Moo/Moo.csproj
@@ -58,6 +58,9 @@
     <Compile Include="BuildOutput.Designer.cs">
       <DependentUpon>BuildOutput.cs</DependentUpon>
     </Compile>
+    <Compile Include="Core\AppSettings.cs" />
+    <Compile Include="Core\GlobalTypes.cs" />
+    <Compile Include="Core\Project.cs" />
     <Compile Include="FBrunchBrowser.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -314,6 +317,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\startpage1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Helpers\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
