--- a/Moo/Moo.csproj
+++ b/Moo/Moo.csproj
@@ -75,6 +75,12 @@
     <Compile Include="Core\Exceptioner.cs" />
     <Compile Include="Core\GlobalTypes.cs" />
     <Compile Include="Core\Project.cs" />
+    <Compile Include="Dialogs\NewProFileDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Dialogs\NewProFileDialog.Designer.cs">
+      <DependentUpon>NewProFileDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="FBrunchBrowser.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -116,6 +122,9 @@
     <EmbeddedResource Include="CodeEditor.resx">
       <DependentUpon>CodeEditor.cs</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Dialogs\NewProFileDialog.resx">
+      <DependentUpon>NewProFileDialog.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FBrunchBrowser.resx">
       <DependentUpon>FBrunchBrowser.cs</DependentUpon>
@@ -356,9 +365,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\whitespace.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Dialogs\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
