--- a/trunk/Moo/Moo.csproj
+++ b/trunk/Moo/Moo.csproj
@@ -93,6 +93,12 @@
     <Compile Include="Dialogs\ProjectConfigDialog.Designer.cs">
       <DependentUpon>ProjectConfigDialog.cs</DependentUpon>
     </Compile>
+    <Compile Include="Dialogs\UpdateDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Dialogs\UpdateDialog.Designer.cs">
+      <DependentUpon>UpdateDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="FBrunchBrowser.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -119,6 +125,7 @@
     </Compile>
     <Compile Include="Helpers\FileHelper.cs" />
     <Compile Include="Helpers\MiscHelper.cs" />
+    <Compile Include="Helpers\MooOnlineInfo.cs" />
     <Compile Include="LexerInitializer.cs" />
     <Compile Include="Main.cs">
       <SubType>Form</SubType>
@@ -142,9 +149,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Dialogs\NewProFileDialog.resx">
       <DependentUpon>NewProFileDialog.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Dialogs\ProjectConfigDialog.resx">
       <DependentUpon>ProjectConfigDialog.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Dialogs\UpdateDialog.resx">
+      <DependentUpon>UpdateDialog.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="FBrunchBrowser.resx">
       <DependentUpon>FBrunchBrowser.cs</DependentUpon>
@@ -367,9 +380,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\projet_brow_refresh.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\startpage1.png" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\ctxtbackgroud.png" />
