--- a/Moo/Moo.csproj
+++ b/Moo/Moo.csproj
@@ -87,17 +87,17 @@
     <Compile Include="Dialogs\NewProFileDialog.Designer.cs">
       <DependentUpon>NewProFileDialog.cs</DependentUpon>
     </Compile>
-    <Compile Include="Dialogs\ProjectConfigDialog.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Dialogs\ProjectConfigDialog.Designer.cs">
-      <DependentUpon>ProjectConfigDialog.cs</DependentUpon>
-    </Compile>
     <Compile Include="Dialogs\UpdateDialog.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Dialogs\UpdateDialog.Designer.cs">
       <DependentUpon>UpdateDialog.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Dialogs\ProjectConfigDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Dialogs\ProjectConfigDialog.Designer.cs">
+      <DependentUpon>ProjectConfigDialog.cs</DependentUpon>
     </Compile>
     <Compile Include="FBrunchBrowser.cs">
       <SubType>Form</SubType>
@@ -151,12 +151,12 @@
       <DependentUpon>NewProFileDialog.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="Dialogs\ProjectConfigDialog.resx">
-      <DependentUpon>ProjectConfigDialog.cs</DependentUpon>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
     <EmbeddedResource Include="Dialogs\UpdateDialog.resx">
       <DependentUpon>UpdateDialog.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Dialogs\ProjectConfigDialog.resx">
+      <DependentUpon>ProjectConfigDialog.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="FBrunchBrowser.resx">
@@ -404,6 +404,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\delete.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\p_add.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\p_delete.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\workbacgroud.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
