--- a/Moo/Moo.csproj
+++ b/Moo/Moo.csproj
@@ -81,6 +81,12 @@
     <Compile Include="Dialogs\AboutDialog.Designer.cs">
       <DependentUpon>AboutDialog.cs</DependentUpon>
     </Compile>
+    <Compile Include="Dialogs\BugRepDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Dialogs\BugRepDialog.Designer.cs">
+      <DependentUpon>BugRepDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="Dialogs\NewProFileDialog.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -145,6 +151,10 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Dialogs\AboutDialog.resx">
       <DependentUpon>AboutDialog.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Dialogs\BugRepDialog.resx">
+      <DependentUpon>BugRepDialog.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Dialogs\NewProFileDialog.resx">
@@ -413,6 +423,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\workbacgroud.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\bug.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\send_bug.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
