--- a/trunk/Moo/Moo.csproj
+++ b/trunk/Moo/Moo.csproj
@@ -98,6 +98,12 @@
     <Compile Include="Dialogs\NewProFileDialog.Designer.cs">
       <DependentUpon>NewProFileDialog.cs</DependentUpon>
     </Compile>
+    <Compile Include="Dialogs\PreferenceDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Dialogs\PreferenceDialog.Designer.cs">
+      <DependentUpon>PreferenceDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="Dialogs\UpdateDialog.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -164,6 +170,10 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Dialogs\NewProFileDialog.resx">
       <DependentUpon>NewProFileDialog.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Dialogs\PreferenceDialog.resx">
+      <DependentUpon>PreferenceDialog.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Dialogs\UpdateDialog.resx">
