--- a/Moo/Moo.csproj
+++ b/Moo/Moo.csproj
@@ -77,6 +77,7 @@
       <DependentUpon>CodeEditor.cs</DependentUpon>
     </Compile>
     <Compile Include="Core\AppSettings.cs" />
+    <Compile Include="Core\Builder.cs" />
     <Compile Include="Core\Exceptioner.cs" />
     <Compile Include="Core\GlobalTypes.cs" />
     <Compile Include="Core\Project.cs" />
